# skillproof

./: .env.example  .gitignore  README.md  pyproject.toml  skillproof.yaml  skills-lock.json
.github/workflows/: pages.yml
benchmarks/agent-browser/: clusters.json
benchmarks/agent-browser/bench_01_agent-browser/: README.md  benchmark.yaml  task_prompt.md
benchmarks/agent-browser/bench_02_specialized-skills/: README.md  benchmark.yaml  task_prompt.md
benchmarks/brand-guidelines/: clusters.json
benchmarks/brand-guidelines/bench_01_anthropic-brand-styling/: README.md  benchmark.yaml  task_prompt.md
benchmarks/docx/: clusters.json
benchmarks/find-skills/: clusters.json
benchmarks/frontend-design/: clusters.json
benchmarks/internal-comms/: clusters.json
benchmarks/pdf/: clusters.json
benchmarks/slack-gif-creator/: clusters.json
benchmarks/vercel-react-best-practices/: clusters.json
docker/: Dockerfile  packages.txt
domains/: .gitignore  README.md  skills_manifest.yaml
domains/pipeline/: README.md  __init__.py  author_runner.py  authoring.py  cli.py  corpus.py  difficulty.py  eval_runner.py  harbor.py  match.py  models.py  skillmap.py  skills_import.py  validate.py
domains/web-ui/: domain.yaml
scripts/: export_site_data.py
site/: index.html  site_data.json
skills/: SOURCES.json
src/skillproof/: __init__.py  chunking.py  cli.py  clustering.py  config.py  embeddings.py  judge.py  models.py  skill_loader.py
tests/: test_agent_loop.py  test_chunking.py  test_clustering.py  test_runner_mocked.py  test_sandbox.py  test_spec.py
(+423 files in other folders)
