[project]
name = "skillproof"
version = "0.1.0"
description = "Automatic benchmark generation and evaluation for Agent Skills (SKILL.md folders)"
requires-python = ">=3.11"
dependencies = [
    "typer>=0.12",
    "pydantic>=2.7",
    "pydantic-settings>=2.3",
    "pyyaml>=6",
    "python-frontmatter>=1.1",
    "openai>=1.35",
    "numpy>=1.26",
    "scikit-learn>=1.5",
    "docker>=7.1",
    "tenacity>=8.3",
    "rich>=13",
    "python-dotenv>=1.0",
]

[project.optional-dependencies]
local-embeddings = ["sentence-transformers>=3"]
dev = ["pytest>=8", "pytest-mock>=3", "ruff>=0.5", "mypy>=1.10"]

[project.scripts]
skillproof = "skillproof.cli:app"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/skillproof"]

[tool.pytest.ini_options]
testpaths = ["tests"]
markers = [
    "docker: tests that require a running Docker daemon",
]

[tool.ruff]
line-length = 100
target-version = "py311"
